--- a/projects/sign-pad-lib/package.json
+++ b/projects/sign-pad-lib/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ngx-sign-pad",
-  "version": "0.0.1-alpha.4",
+  "name": "@gappl/ngx-sign-pad",
+  "version": "1.0.2",
 
   "description": "An Angular wrapper for [szimek/signature_pad](https://www.npmjs.com/package/signature_pad).",
   "keywords" :["Angular","Sign", "Signature", "Signaturepad", "Signpad", "SignaturePad"],
@@ -14,7 +14,7 @@
     "signature_pad": "^3.0.0-beta.3"
   },
   "peerDependencies": {
-    "@angular/common": "^7.2.0",
-    "@angular/core": "^7.2.0"
+    "@angular/common": "^9.0.2",
+    "@angular/core": "^9.0.2"
   }
 }
